# CALM

./: .gitignore  README.md
SAVs/: .gitignore  LICENSE  README.md  pyproject.toml
SAVs/data/: example_format.json
SAVs/scripts/dataset_processing/: README.md  prepare_asvspoof.py  prepare_esc50.py  prune_audioset.py
SAVs/src/: __init__.py  calm.py  model.py  preprocess.py  pseudolabel.py  run.py  run_mcq_audioset.py  run_mcq_spoof.py  utils.py
SAVs/src/probabilistic/: group_weighted_prwe.py  probablistic_trivial.py  prwe_utils.py  run_grw_sav.py  run_grw_spoof.py  run_mcq_probabilistic.py  run_mcq_prwe.py  run_mcq_prwe_audioset.py  run_mcq_prwe_av_vggsound.py  run_mcq_prwe_spoof.py  run_mcq_prwe_trivial.py  run_test_query_cache_only.py
dataset_processing/: AVSPOOF.py  MLAAD_gen.py  create_proper_40shot_esc.py  prune_audioset.py
slurm/: =14.0  active_learning_generation.sh  audioset_mcq_sav.sh  inference_batch.sh  mcq_sav.sh  mcq_sav_grw.sh  mcq_sav_grw_spoof.sh  mcq_sav_probabilistic.sh  mcq_sav_prwe.sh  mcq_sav_prwe_audioset.sh  mcq_sav_prwe_av.sh  mcq_sav_prwe_spoof.sh  mcq_sav_prwe_trivial.sh  mcq_sav_unsupervised.sh  mcq_sav_video.sh  parallel_embeddings.sh  psuedolabel_generation.sh  spoof_sav.sh  test_video_loading.sh  train_mn.sh
